test/syntax_not_checked/s0191_number_of_1_bits/hafis/starchat/result.txt
./test/syntax_check/s0191_number_of_1_bits/hafis/starchat/Solution.java:16: error: integer number too large
//@ ensures((n == 11111111111111111111111111111101) ==> (\result == 31));
                  ^
1 error
